Add SQL rewrites for key-value store queries in tbleSpace
tbleSpace has two data paths: typed tables (rows in named SQL tables)
and a key-value store (kv_store table keyed by fURI).  The existing 9 SQL
rewrites (count, sum, mean, limit, has, where, etc.) assumed every query
targeted a typed table and would crash with \"Table doesn't exist\" on
KV-store patterns like *drdb:msg/1/+.count().

Guard infrastructure:
- matchSpacePredicate on RewriteBuilder — space-aware match-time guard;
  returns false → rewrite skipped, original unoptimized path preserved
- optimizeWithURI on RewriteBuilder — passes expanded fURI so KV
  rewrites can strip the space prefix via routeFromSpace
- All 9 CommonRewrites helpers accept optional matchSpacePredicate

Table guards (prevent crash):
- tableGuard rejects rewrites when collection is not a known SQL table
- Fixed guard returning true for wildcard/no-collection URIs
- Error codes widened: 1054 → 1054 || 1146

KV rewrites (push computation to SQL):
- kv_count: SELECT COUNT(*) FROM kv_store WHERE furi LIKE pattern
- kv_limit: SELECT furi, obj FROM kv_store WHERE ... LIMIT n
- buildKVSQL in KVStoreUtil translates +/* wildcards to LIKE/NOT LIKE
- Multi-+ generates exact-segment-count SQL (not 1-to-N)

Utilities extracted:
- KVStoreUtil (translateKVPatternToSQL, buildKVSQL)
- TableStoreUtil (isTableCollection)

Tests:
- testWildcardCollectionReturnsSchemaTypes — canary for instset regressions
- testKVStoreRewrites — 9 @ParameterizedTest cases (count + limit)
- All guarded by @MethodSource with runRewriteTest dispatch